--- a/RecommenderSystemFinal.ipynb
+++ b/RecommenderSystemFinal.ipynb
@@ -548,8 +548,8 @@
    "source": [
     "matrix = V\n",
     "corr = np.corrcoef(matrix)\n",
-    "corr = pd.DataFrame(corr)\n",
-    "corr.to_csv(\"D:\\Kaggle\\VS\\Git\\Recommender-System\\Recommendercorr.csv\", index= False)"
+    "#corr = pd.DataFrame(corr)\n",
+    "#corr.to_csv(\"D:\\Kaggle\\VS\\Git\\Recommender-System\\Recommendercorr.csv\", index= False)"
    ]
   },
   {
@@ -804,17 +804,6 @@
    "outputs": [],
    "source": [
     "#movie_ids[n_corr-10:n_corr]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fe7e848",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = ['1','2','3']\n",
-    "arr.remove('2')"
    ]
   },
   {
